drone-runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone-runner
  labels:
    name: drone-runner
