drone-runner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: drone-runner
  name: drone-runner
  labels:
    helm.sh/chart: drone-runner-kube-0.1.5
    app.kubernetes.io/name: drone-runner-kube
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: drone-runner-kube
    app.kubernetes.io/version: "1.0.0-beta.6"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/https-redirect-status-code: "301"
    konghq.com/protocols: https
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - "drone-runner.example.com"
      secretName: drone.example.com.ssl
  rules:
    - host: "drone-runner.example.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: drone-runner-drone-runner-kube
              port:
                number: 3000
